# security_huks

./: BUILD.gn  README.md  README_en.md  README_zh.md  ohos.build  readme.md
frameworks/crypto_lite/cipher/: BUILD.gn
frameworks/crypto_lite/js/builtin/: BUILD.gn
frameworks/huks_lite/: BUILD.gn
frameworks/huks_lite/source/: BUILD.gn  hks_access.h
frameworks/huks_lite/source/hw_keystore_sdk/: hks_access.c  hks_client.c
frameworks/huks_lite/source/hw_keystore_sdk/common/: hks_bn.c  hks_bn.h  hks_common.c  hks_common.h  hks_mem.h  hks_utility.c  hks_utility.h
frameworks/huks_lite/source/hw_keystore_sdk/soft_service/: hks_file.c  hks_file.h  hks_rkc.c  hks_rkc.h  hks_service.c  hks_service.h  hks_storage.c  hks_storage.h
frameworks/huks_standard/main/: BUILD.gn
frameworks/huks_standard/main/common/: BUILD.gn
frameworks/huks_standard/main/common/include/: hks_base_check.h  hks_check_paramset.h  hks_cmd_id.h  hks_common_check.h  hks_config.h  hks_config_base.h  hks_config_lite.h  hks_config_small.h  hks_crypto_adapter.h  hks_crypto_hal.h  hks_crypto_hal_config.h  hks_log.h  hks_mem.h  hks_mem.h.rej  (+1 more)
frameworks/huks_standard/main/core/: BUILD.gn
frameworks/huks_standard/main/crypto_engine/: BUILD.gn
frameworks/huks_standard/main/crypto_engine/openssl/: BUILD.gn
frameworks/huks_standard/main/crypto_engine/openssl/include/: hks_openssl_aes.h  hks_openssl_curve25519.h  hks_openssl_dsa.h  hks_openssl_ecc.h  hks_openssl_ed25519tox25519.h  hks_openssl_engine.h  hks_openssl_hash.h  hks_openssl_hmac.h  hks_openssl_kdf.h  hks_openssl_rsa.h
frameworks/huks_standard/main/crypto_engine/openssl/src/: hks_openssl_aes.c  hks_openssl_curve25519.c  hks_openssl_dh.c  hks_openssl_dsa.c  hks_openssl_ecc.c  hks_openssl_ed25519tox25519.c  hks_openssl_engine.c  hks_openssl_hash.c  hks_openssl_hmac.c  hks_openssl_kdf.c  hks_openssl_rsa.c
frameworks/huks_standard/main/os_dependency/: BUILD.gn
interfaces/innerkits/huks_lite/: BUILD.gn  hks_api.h  hks_client.h  hks_param.h  hks_types.h
interfaces/innerkits/huks_standard/main/: BUILD.gn
interfaces/innerkits/huks_standard/test/: BUILD.gn
interfaces/kits/js/: @ohos.security.huks.d.ts
interfaces/kits/napi/: BUILD.gn
interfaces/kits/napi/include/: huks_napi_common.h  huks_napi_delete_key.h  huks_napi_encrypt.h  huks_napi_export_key.h  huks_napi_import_key.h  huks_napi_is_key_exist.h
interfaces/kits/napi/src/: huks_napi.cpp  huks_napi_agree_key.cpp  huks_napi_attest_key.cpp  huks_napi_common.cpp  huks_napi_decrypt.cpp  huks_napi_delete_key.cpp  huks_napi_derive_key.cpp  huks_napi_encrypt.cpp  huks_napi_export_key.cpp  huks_napi_generate_key.cpp  huks_napi_get_certificate_chain.cpp  huks_napi_get_key_properties.cpp  huks_napi_get_sdk_version.cpp  huks_napi_import_key.cpp  huks_napi_is_key_exist.cpp  huks_napi_mac.cpp  huks_napi_sign.cpp  huks_napi_unwrap_key.cpp  huks_napi_verify.cpp  huks_napi_wrap_key.cpp
services/huks_standard/: BUILD.gn  huks_service.cfg  huks_service.rc
services/huks_standard/huks_engine/main/: BUILD.gn
services/huks_standard/huks_engine/main/core/: BUILD.gn
services/huks_standard/huks_engine/main/core/include/: hks_auth.h  hks_core_service.h  hks_crypto_hal.h  hks_keyblob.h  hks_rkc.h  hks_upgrade_key_info.h
services/huks_standard/huks_engine/main/core/src/: hks_auth.c  hks_core_service.c  hks_keyblob.c  hks_keyblob_lite.c  hks_rkc.c  hks_rkc_rw.c  hks_upgrade_key_info.c
services/huks_standard/huks_engine/main/os_dependency/: BUILD.gn
services/huks_standard/huks_service/main/: BUILD.gn
services/huks_standard/huks_service/main/core/: BUILD.gn
services/huks_standard/huks_service/main/core/include/: hks_access.h  hks_client_check.h  hks_client_service.h  hks_client_service_adapter.h  hks_double_list.h  hks_file_operator.h  hks_mutex.h  hks_operation.h  hks_storage.h  hks_storage_adapter.h  hks_storage_file_lock.h  hks_upgrade_storage_data.h
services/huks_standard/huks_service/main/core/src/: hks_client_check.c  hks_client_service.c  hks_client_service_adapter.c  hks_client_service_adapter_lite.c  hks_double_list.c  hks_lock.c  hks_operation.c  hks_storage.c  hks_storage_adapter.c  hks_storage_file_lock.c  hks_storage_lite.c  hks_upgrade_storage_data.c
services/huks_standard/huks_service/main/os_dependency/: BUILD.gn
services/huks_standard/huks_service/main/os_dependency/ca/: hks_teec.c  hks_teec.h
services/huks_standard/huks_service/main/os_dependency/idl/: BUILD.gn
services/huks_standard/huks_service/main/os_dependency/idl/ipc/: hks_ipc_serialization.c  hks_ipc_serialization.h  hks_ipc_service.c  hks_ipc_service.h  hks_response.cpp  hks_response.h  hks_response_samgr.c
services/huks_standard/huks_service/main/os_dependency/idl/passthrough/: hks_passthrough_access.c
services/huks_standard/huks_service/main/os_dependency/posix/: hks_file_operator.c  hks_file_operator_lite.c  hks_mutex.c  hks_rwlock.c
services/huks_standard/huks_service/main/os_dependency/sa/: hks_sa.cpp  hks_sa.h
services/huks_standard/huks_service/main/os_dependency/sa/sa_mgr/: hks_samgr_server.h  hks_samgr_service.c  hks_samgr_service_feature.c  service_pro_main.c
services/huks_standard/huks_service/main/os_dependency/sa/sa_profile/: 3510.xml  BUILD.gn  huks_service.xml
services/huks_standard/huks_service/main/test/unittest/: BUILD.gn
services/huks_standard/huks_service/main/test/unittest/src/: hks_storage_file_lock_test.cpp  hks_storage_test.cpp
source/base/: hilink_osadapter.h  security_random.h
test/: BUILD.gn
test/unittest/src/common/: BUILD.gn  hks_test_aes.c  hks_test_api_performance.c  hks_test_cipher.c  hks_test_common.c  hks_test_file_operator.c  hks_test_log.c
test/unittest/src/liteos_a_adapter/: BUILD.gn  hks_aes_test.cpp  hks_agreement_test.cpp  hks_cipher_test.cpp  hks_curve25519_test.cpp  hks_hash_test.cpp  hks_mac_test.cpp  hks_others_test.cpp  hks_safe_cipher_key_test.cpp
test/unittest/src/liteos_m_adapter/: BUILD.gn  Test.json  hks_aes_test.c  hks_curve25519_test.c  hks_generate_key_test.c  hks_modify_key_test.c  hks_safe_cipher_key_test.c  hks_safe_compare_key_test.c
(+148 files in other folders)
