# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("libhukssrv") {
  subsystem_name = "security"
  part_name = "huks_standard"

  deps = [
    "//base/security/huks/services/huks_standard/huks_engine/main:libhuks_engine_standard_static",
    "//base/security/huks/services/huks_standard/huks_service/main:libhuks_service_standard_static",
  ]
}

group("libhuks_service_engine_standard_group") {
  if (is_standard_system) {
    public_deps = [
      "//base/security/huks/services/huks_standard/huks_engine/main:libhuks_engine_standard_static",
      "//base/security/huks/services/huks_standard/huks_service/main:libhuks_service_standard_static",
    ]
  }
}
