# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("huks_service.rc") {
  if (use_musl) {
    source = "huks_service.cfg"
  } else {
    source = "huks_service.rc"
  }
  relative_install_dir = "init"
  subsystem_name = "security"
  part_name = "huks_standard"
}

ohos_shared_library("huks_service") {
  subsystem_name = "security"
  part_name = "huks_standard"
  defines = [
    "L2_STANDARD",
    "_HARDWARE_ROOT_KEY_",
    "_HUKS_LOG_ENABLE_",
  ]
  deps = [
    ":huks_service.rc",
    "//base/security/huks/services/huks_standard/huks_engine/main:libhuks_engine_standard_static",
    "//base/security/huks/services/huks_standard/huks_service/main:libhuks_service_standard_static",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]
}

group("libhuks_service_engine_standard_group") {
  if (is_standard_system) {
    public_deps = [
      "//base/security/huks/services/huks_standard/huks_engine/main:libhuks_engine_standard_static",
      "//base/security/huks/services/huks_standard/huks_service/main:libhuks_service_standard_static",
    ]
  }
}
