#
# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//base/security/huks/build/config.gni")

config("soft_huks_config") {
  include_dirs = [
    ".",
    "hw_keystore_sdk",
    "hw_keystore_sdk/common",
    "hw_keystore_sdk/soft_service",
    "//third_party/bounds_checking_function/include",
    "//base/security/huks/interfaces/innerkits/huks_lite",
  ]

  if (ohos_kernel_type == "liteos_m" && disable_authenticate == true) {
    defines = [
      "_FORTIFY_SOURCE = 2",
      "_CUT_AUTHENTICATE_",
    ]
  } else {
    defines = [ "_FORTIFY_SOURCE = 2" ]
  }

  cflags = [
    "-fvisibility=hidden",
    "-flto",
    "-Wall",
  ]
}

config("public_huks_config") {
  include_dirs = [ "//base/security/huks/interfaces/innerkits/huks_lite" ]
}

if (ohos_kernel_type == "liteos_m") {
  static_library("huks") {
    sources = [
      "hw_keystore_sdk/common/hks_bn.c",
      "hw_keystore_sdk/common/hks_common.c",
      "hw_keystore_sdk/common/hks_log_utils.c",
      "hw_keystore_sdk/common/hks_utility.c",
      "hw_keystore_sdk/hks_access.c",
      "hw_keystore_sdk/hks_client.c",
      "hw_keystore_sdk/soft_service/hks_file.c",
      "hw_keystore_sdk/soft_service/hks_rkc.c",
      "hw_keystore_sdk/soft_service/hks_service.c",
      "hw_keystore_sdk/soft_service/hks_storage.c",
    ]
    public_configs = [ ":public_huks_config" ]
    configs += [ ":soft_huks_config" ]
    deps = [
      "//build/lite/config/component/openssl:openssl_static",
      "//third_party/mbedtls:mbedtls_static",
    ]
  }
} else {
  shared_library("huks") {
    sources = [
      "hw_keystore_sdk/common/hks_bn.c",
      "hw_keystore_sdk/common/hks_common.c",
      "hw_keystore_sdk/common/hks_log_utils.c",
      "hw_keystore_sdk/common/hks_utility.c",
      "hw_keystore_sdk/hks_access.c",
      "hw_keystore_sdk/hks_client.c",
      "hw_keystore_sdk/soft_service/hks_file.c",
      "hw_keystore_sdk/soft_service/hks_rkc.c",
      "hw_keystore_sdk/soft_service/hks_service.c",
      "hw_keystore_sdk/soft_service/hks_storage.c",
    ]

    configs += [ ":soft_huks_config" ]

    public_deps = [
      "//build/lite/config/component/openssl:openssl_shared",
      "//third_party/bounds_checking_function:libsec_shared",
      "//third_party/mbedtls:mbedtls_shared",
    ]

    public_configs = [ ":public_huks_config" ]
  }
}
