# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("huks_config") {
  include_dirs = [ "include" ]
}

ohos_static_library("libhuks_openssl_standard_static") {
  subsystem_name = "security"
  part_name = "huks_standard"
  public_configs = [ ":huks_config" ]

  include_dirs = [
    "//utils/native/base/include",
    "//third_party/openssl/include/",
  ]

  sources = [
    "src/hks_openssl_aes.c",
    "src/hks_openssl_curve25519.c",
    "src/hks_openssl_ecc.c",
    "src/hks_openssl_ed25519tox25519.c",
    "src/hks_openssl_engine.c",
    "src/hks_openssl_hash.c",
    "src/hks_openssl_hmac.c",
    "src/hks_openssl_kdf.c",
  ]

  deps = [
    "//base/security/huks/frameworks/huks_standard/main/common:libhuks_common_standard_static",
    "//third_party/openssl:libcrypto_static",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
  complete_static_lib = true
}
