# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("huks_config") {
  include_dirs = [ "ipc" ]
}

ohos_static_library("libhuks_service_idl_standard_static") {
  subsystem_name = "security"
  part_name = "huks_standard"
  public_configs = [ ":huks_config" ]
  include_dirs = [
    "//utils/native/base/include",
    "//base/security/huks/services/huks_standard/huks_engine/main/core/include",
  ]
  sources = [
    "ipc/hks_ipc_serialization.c",
    "ipc/hks_ipc_service.c",
    "ipc/hks_response.cpp",
    "passthrough/hks_passthrough_access.c",
  ]
  deps = [
    "//base/security/huks/frameworks/huks_standard/main/common:libhuks_common_standard_static",
    "//base/security/huks/services/huks_standard/huks_service/main/core:libhuks_service_core_standard_static",
    "//utils/native/base:utils",
  ]
  external_deps = [ "ipc:ipc_core" ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
  complete_static_lib = true
}
